# shoebill-operator

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.md
.woodpecker/: build.yaml
src/: lib.rs  main.rs
src/api/v1alpha1/: configsets_api.rs  mod.rs
src/cmd/: controller.rs  manifests.rs  mod.rs
src/controllers/: configsets_controller.rs  mod.rs
src/helpers/: manifests.rs  mod.rs
tests/: test.pl
tests/manifests/: example.yaml
yaml/example/: configmap.yaml  example.yaml  secret.yaml
