[package]
name = "shoebill-operator"
version = "0.1.0"
edition = "2021"
default-run = "shoebill"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
doc = false
name = "shoebill"
path = "src/main.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive", "env"] }
kube = { version = "0.87.1", features = ["derive", "runtime", "client"] }
schemars = { version = "0.8.12", features = ["chrono"] }
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.29"
thiserror = "1.0.50"
actix-web = "4.4.0"
log = "0.4.20"
env_logger = "0.10.1"
base64 = "0.21.5"
handlebars = "4.5.0"
kube-client = "0.87.1"
